--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -9,7 +9,7 @@
 <!-- ~~~~~~~~+:+:::::+:+::+:+:::::+:+::+:+:+::+:+:+:+::+:+:::::+:+:::::+:+:+:+:::::+:+::+:+:+::+:+:+:+::+::+:+:+~~~~~~~~ -->
 <div class="tabs">
 	<div class="info-box">
-		<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/ShadowrunLogo.png" style="max-height: 200px;" />
+		<img alt="Shadowrun black and metallic logo" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/ShadowrunLogo.png" style="max-height: 200px;" />
 		<div>
 			<h1 data-i18n="character">Character</h1><input type="text" name="attr_character_name" placeholder="Character name" title="@{character_name}" />
 			<h1 data-i18n="player">Player</h1><input type="text" name="attr_player_name" placeholder="Player name" title="@{player_name}" />
@@ -719,7 +719,7 @@
 						<!-- Ammo removal button -->
 						<button name="act_shots_remove" type="action">4</button>
 						<button type="action" name="act_primary_ammo" title="Shots Fired">
-							<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/gun.png" /><span name="attr_shots_fired"></span>
+							<img alt="small handgun icon" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/gun.png" /><span name="attr_shots_fired"></span>
 						</button>
 						<button name="act_shots_add" type="action">4</button>
 					</div>
@@ -2999,9 +2999,12 @@
 </div><!-- ~~~~~~~~ End of the NPC sheet ~~~~~~~~ -->
 
 <div class="footer">
-	<span data-i18n="copyrightfooter">The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.
-	</span>
-	<span>Version </span><span name="attr_version"></span>
+	<div>
+		<span data-i18n="copyrightfooter">The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.
+		</span>
+		<span>Version </span><span name="attr_version"></span>
+	</div>
+	<img src="https://raw.githubusercontent.com/clevett/SheetTemplate/master/images/EProd_Emerald_Gloss.png" />
 </div>
 
 <!-- ~~~~~~~~+:+:::::+:+::+:+:+::+:+:+:+::+:+::::::+:+::+:+:+:+::+:+:::::+:+:+:+:::::+:+::+:+:+::+:+:+:+::::+:+:~~~~~~~~ -->
@@ -4170,8 +4173,7 @@
 				<li>Click the Import button</li>
 				<li>Review the data. Use the checkbox <strong>Show Hidden Inputs</strong> to fix data.</li> 
 				<li>Click Apply to <u>overwrite</u> information on the character sheet</li>
-			</ol>
-			<em>Chummer frequently has the wrong information for Weapons. Review them in the Arms tab after clicking apply. Specializations will not be applied to Weapons or Magic. You will need to manually update the checkbox.</em>`;
+			</ol>`;
 
 	const herolabDirections = `
 		<ol>
@@ -4193,7 +4195,7 @@
     ['active', 'knowledge', 'language', 'quality', 'martial',
       'range', 'melee', 'weapon', 'armor', 'augementations',
       'items', 'NPCspell', 'spell', 'rituals', 'preps', 'powers',
-      'contacts', 'vehicle', 'lifestyle'].forEach(group => {
+      'contacts', 'vehicle', 'lifestyle', "programs", "forms"].forEach(group => {
       getSectionIDs(`repeating_${group}`, (ids) => {
         ids.forEach((id) => {
           removeRepeatingRow(`repeating_${group}_${id}`);
@@ -5010,6 +5012,21 @@
 
 		<h2>Complete</h2>
 		<p>After reviewing the data above, click Apply. This will <strong>overwrite</strong> data on the sheet where applicable.</p>
+		<h3>Chummer Notes</h3>
+		<ul>
+    		<li>
+    			Chummer frequently has the wrong information for <strong>Weapons</strong>. Review them in the Arms tab after clicking apply.
+    		</li>
+    		<li>
+    			<strong>Specializations</strong> will not be applied to Weapons or Magic. You will need to manually update the checkbox.
+    		</li>
+    		<li>
+    			<strong>Vehicles</strong> will not be imported.
+    		</li>
+    		<li>
+    			<strong>Complex Forms</strong> will not be imported.
+    		</li>
+    	</ul>
 		<div class="finish-button">
 			<button class="finish" type="finish" value="apply" data-i18n="apply" disabled>Apply</button>
 		</div>
@@ -5018,4 +5035,13 @@
 		   <button class="prev" type="cancel" value="cancel" data-i18n="cancel">Cancel</button>
 		 </div>
 	 </div>
+</charmancer>
+
+<charmancer class="sheet-charmancer-final">
+    <div class="charmancer">
+        <div class="">
+           <h1>Importing your Shadowrun character...overwriting previous data</h1>
+           <img alt="emerald productions, llc" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/EProd_Title_Green.jpg" />
+        </div>
+    </div>
 </charmancer>
