adding new spell type Zaubertricks

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -3989,7 +3989,7 @@
 
 		<div class="magie-section zauber">
 			<h3 data-i18n="zauber">Zauber</h3>
-				<input name="attr_zauber_selector" type="radio" class="zauber-cb0" title="all" value="0"></input>
+				<input name="attr_zauber_selector" type="radio" class="zauber-cb0" title="all" value="0" selected></input>
 			  <span class="zauber-cb0">All</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb1" title="Zauberspruch" value="1"></input>
 				<span class="zauber-cb1">Zauberspruch</span>
@@ -4007,6 +4007,8 @@
 				<span class="zauber-cb7">Zaubermelodie</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb8" title="Zauberspruch" value="8"></input>
 				<span class="zauber-cb8">Zaubertanz</span>
+				<input name="attr_zauber_selector" type="radio" class="zauber-cb9" title="Zauberspruch" value="9"></input>
+				<span class="zauber-cb8">Zaubertrick</span>
 
 
 			<div class="zauberliste">
@@ -4020,6 +4022,7 @@
 			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb6" value="6"></input>
 			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb7" value="7"></input>
 			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb8" value="8"></input>
+			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb9" value="9"></input>
 			<div class="zauber-filtered">
 				<span  data-i18n="typ">Typ</span>
 				<select class="zaubertyp-in" style="width: 8em;" name="attr_zaubertyp" >
@@ -4032,6 +4035,7 @@
 					<option value="6" data-i18n="animistenkraft">Animistenkraft</option>
 					<option value="7" data-i18n="zaubermelodie">Zaubermelodie</option>
 					<option value="8" data-i18n="zaubertanz">Zaubertanz</option>
+					<option value="8" data-i18n="zaubertrick">Zaubertrick</option>
 				</select>
 				<span  data-i18n="name">Name</span>
 				<input type="text" name="attr_zaubername" >
