fixed select Rüstungen

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -6078,7 +6078,7 @@
 	  								</select></td>
 	  							<td class="padding-1"><input type="number" name="attr_ruestung_rs_mod_1" value="0"></td>
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_anmerkung_1" ></td>
-									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" ></td>
+									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" value="1"></td>
 	  						</tr>
 								<tr align="center">
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_name_2" ></td>
@@ -6096,7 +6096,7 @@
 	  								</select></td>
 	  							<td class="padding-1"><input type="number" name="attr_ruestung_rs_mod_2" value="0"></td>
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_anmerkung_2" ></td>
-									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" ></td>
+									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" value="2"></td>
 	  						</tr>
 								<tr align="center">
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_name_3" ></td>
@@ -6114,7 +6114,7 @@
 	  								</select></td>
 	  							<td class="padding-1"><input type="number" name="attr_ruestung_rs_mod_3" value="0"></td>
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_anmerkung_3" ></td>
-									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" ></td>
+									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" value="3"></td>
 	  						</tr>
 								<tr align="center">
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_name_4" ></td>
@@ -6132,7 +6132,7 @@
 	  								</select></td>
 	  							<td class="padding-1"><input type="number" name="attr_ruestung_rs_mod_4" value="0"></td>
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_anmerkung_4" ></td>
-									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" ></td>
+									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" value="4"></td>
 	  						</tr>
 								<tr align="center">
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_name_5" ></td>
@@ -6150,7 +6150,7 @@
 	  								</select></td>
 	  							<td class="padding-1"><input type="number" name="attr_ruestung_rs_mod_5" value="0"></td>
 	  							<td class="padding-1"><input type="text" name="attr_ruestung_anmerkung_5" ></td>
-									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" ></td>
+									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" value="5"></td>
 	  						</tr>
 	  			</table>
 				<h3 data-i18n="inventar">Inventar</h3>
