--- a/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
@@ -233,8 +233,8 @@
 						<input class="secondary-attr-input"  placeholder="當前" type="text" min="0" name="attr_san">
 					</td>
 					<td>
-						<button class='old-roll' type='roll' value='@{roll_display}&{template:coc} {{ima_coc=@{ima_coc_san}}} {{name=San值檢定}} {{success=[[@{san}]]}} {{hard=[[floor(@{san}/2)]]}} {{extreme=[[floor(@{san}/5)]]}} {{roll1=[[1d100]]}} {{roll2=[[1d100]]}} {{roll3=[[1d100]]}}' name='roll_san_check' />
-						<button class='new-roll' type='roll' value='@{roll_display}&{template:coc-1}{{ima_coc1=@{ima_coc1_san}}}{{ima_coc1_fum=@{ima_coc1_san_fum}}}{{ima_coc1_fail=@{ima_coc1_san_fail}}}{{ima_coc1_succ=@{ima_coc1_san_succ}}}{{ima_coc1_hard=@{ima_coc1_san_hard}}}{{ima_coc1_ext=@{ima_coc1_san_ext}}}{{ima_coc1_crit=@{ima_coc1_san_crit}}}  {{name=San值檢定}} {{success=[[@{san}]]}} {{hard=[[floor(@{san}/2)]]}} {{extreme=[[floor(@{san}/5)]]}} {{roll1=[[1d100]]}}' name='roll_san_check' />
+						<button class='old-roll' type='roll' value='@{roll_display}&{template:coc} {{ima_coc=@{ima_coc_san}}} {{name=San值檢定}} {{success=[[@{san}]]}} {{hard=[[floor(@{san}/2)]]}} {{extreme=[[floor(@{san}/5)]]}} {{roll1=[[1d100]]}} {{roll2=[[1d100]]}} {{roll3=[[1d100]]}}{{san_when_insane=[[@{san_when_insane}]]}}' name='roll_san_check' />
+						<button class='new-roll' type='roll' value='@{roll_display}&{template:coc-1}{{ima_coc1=@{ima_coc1_san}}}{{ima_coc1_fum=@{ima_coc1_san_fum}}}{{ima_coc1_fail=@{ima_coc1_san_fail}}}{{ima_coc1_succ=@{ima_coc1_san_succ}}}{{ima_coc1_hard=@{ima_coc1_san_hard}}}{{ima_coc1_ext=@{ima_coc1_san_ext}}}{{ima_coc1_crit=@{ima_coc1_san_crit}}}  {{name=San值檢定}} {{success=[[@{san}]]}} {{hard=[[floor(@{san}/2)]]}} {{extreme=[[floor(@{san}/5)]]}} {{roll1=[[1d100]]}}{{san_when_insane=[[@{san_when_insane}]]}}' name='roll_san_check' />
 					</td>
 					<td style="text-align: center">/</td>
 					<td colspan="4">
@@ -1464,6 +1464,12 @@
 			<td class="template_label">擲出:</td>
 			<td class="template_value">{{roll1}}, {{roll2}}, {{roll3}}</td>
 		</tr>
+		{{#san_when_insane}}
+		<tr>
+			<td class="template_label">不定性瘋狂值:</td>
+			<td class="template_value">{{san_when_insane}}</td>
+		</tr>
+		{{/san_when_insane}}
 		<tr style="background:#DFF0D8;">
 			<td class="template_label">+2:</td>
 			<!-- Is roll2 less than roll1 -->
@@ -4109,6 +4115,12 @@
 			<td class="template_label">擲出:</td>
 			<td class="template_value">{{roll1}}</td>
 		</tr>
+		{{#san_when_insane}}
+		<tr>
+			<td class="template_label">不定性瘋狂值:</td>
+			<td class="template_value">{{san_when_insane}}</td>
+		</tr>
+		{{/san_when_insane}}
 		<tr style="background:#BEBEBE;">
 			<td class="template_label">結果:</td>
 				<!-- 01 is always Critical -->
