--- a/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
@@ -4290,7 +4290,7 @@
 		
 		{{#rollTotal() roll1 6}}
 		<tr>
-			<td class="template_value"> 持續 {{rounds}} 輪.</td>
+			<td class="template_value"> 持續 {{rounds}} 小時.</td>
 		</tr>
 		{{/rollTotal() roll1 6}}
 		{{#rollTotal() roll1 9}}
