--- a/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed_Chinese_Traditional/coc_7th_ed.html
@@ -1499,7 +1499,7 @@
 		</tr>
 		{{#san_when_insane}}
 		<tr>
-			<td class="template_label">不定性瘋狂值:</td>
+			<td class="template_label">不定性瘋狂:</td>
 			<td class="template_value">{{san_when_insane}}</td>
 		</tr>
 		{{/san_when_insane}}
