--- a/inSANe auto cal/inSANe.html
+++ b/inSANe auto cal/inSANe.html
@@ -251,13 +251,44 @@
 								</tr>
 								</table>
 							</div>
+						
+							<!-- 指定骰組 
+						感情骰1D6 			場景表 				BadEnding表
+						恐怖的現代日本場景表 狂躁的二十年代場景表 暗黑的維多利亞場景表-->
 							<div class="section">
 								<table style="width:68%" align="center">
 									<thead>
 										<tr>
-											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_painkiller">Painkiller</th>
-											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_weapon">Weapon</th>
-											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_talisman">Talisman</th>
+											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_painkiller">感情骰</th>
+											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_weapon">場景表</th>
+											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_talisman">BadEnding表</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="sheet-txt-center">
+												
+													<button class='old-roll' type='roll' style="background-color:#f6f6f6; color:#000000;"
+														value="@{roll_display}&{template:Ninpo} {{name=@{character_name} @{roll} @{puncture}}}{{target=[[@{A9_value}]]}}{{roll=[[2d6]]}}"
+														></button>
+											</td>
+											<td class="sheet-txt-center">
+												<input type="number" name="attr_ins_item2" id="attr_ins_item2" value="0" class="sheet-full">
+											</td>
+											<td class="sheet-txt-center">
+												<input type="number" name="attr_ins_item3" id="attr_ins_item3" value="0" class="sheet-full">
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<div class="section">
+								<table style="width:68%" align="center">
+									<thead>
+										<tr>
+											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_painkiller">恐怖的現代日本場景表</th>
+											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_weapon">狂躁的二十年代場景表</th>
+											<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_talisman">暗黑的維多利亞場景表</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -275,6 +306,30 @@
 									</tbody>
 								</table>
 							</div>
+								<div class="section">
+									<table style="width:68%" align="center">
+										<thead>
+											<tr>
+												<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_painkiller">Painkiller</th>
+												<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_weapon">Weapon</th>
+												<th style="width: 100px;background:#000; color:#fff;" data-i18n="items_talisman">Talisman</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="sheet-txt-center">
+													<input type="number" name="attr_ins_item1" id="attr_ins_item1" value="0" class="sheet-full">
+												</td>
+												<td class="sheet-txt-center">
+													<input type="number" name="attr_ins_item2" id="attr_ins_item2" value="0" class="sheet-full">
+												</td>
+												<td class="sheet-txt-center">
+													<input type="number" name="attr_ins_item3" id="attr_ins_item3" value="0" class="sheet-full">
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
 						</div>
 					</div>
 
