--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -202,8 +202,8 @@
       			<div class="sheet-tableCellSkill">Experimentaltechnik</div>
             <div class="sheet-tableCellAtt">
               <select name="attr_experimentaltechnik_Att" class="sheet-charaselect">
-                  <option value="@{st}">(ST)</option>
-                  <option value="@{ch}">(CH)</option>
+                  <option value="@{lo}">(LO)</option>
+                  <option value="@{fa}">(FA)</option>
               </select>
             </div>
       			<div class="sheet-tableCellValue"><input name="attr_experimentaltechnik" type="number" value="0" /></div>
@@ -397,7 +397,7 @@
       		</div>
       		<div class="sheet-tableRow">
       			<div class="sheet-tableCellSkill">Saufen</div>
-      			<div class="sheet-tableCellAtt">Ko</div>
+      			<div class="sheet-tableCellAtt">KO</div>
       			<div class="sheet-tableCellValue"><input name="attr_saufen" type="number" value="0" /></div>
       			<div class="sheet-tableCellValue"><input name="attr_saufen_mod" type="number" value="0" /></div>
       			<div class="sheet-tableCellRoll"><button name="roll_saufen" type="roll" value="@{saufen_makro}"></button></div>
@@ -663,6 +663,7 @@
             <div class="sheet-item sheet-med"><input type="text" name="attr_psiname" /></div>
             <div class="sheet-item sheet-puny"><label>Art:</label></div>
             <div class="sheet-item sheet-med"><input type="text" name="attr_psiart" /></div>
+            <div class="sheet-item sheet-puny" style="text-align: center;"><abbr title="Gemeistert"><input type="checkbox" name="attr_meisterschaft" /></abbr></div>
           </div>
           <div class="sheet-row sheet-one sheet-Makro_psi">
             <textarea name="attr_psi_makro">@{abilityroll} benutzt @{psiname} mit dem Ergebniss ?{Min. Zielbereich|@{psiRangeMin}} > [[1d6! + ((@{psikraft} - 1) - @{malusGesamt} + ?{Modifier?|0})d6]]< ?{Max. Zielbereich|@{psiRangeMax}}</textarea>
@@ -670,10 +671,16 @@
           <div class="sheet-row">
             <div class="sheet-item sheet-tiny"><label>Kraft:</label></div>
             <div class="sheet-item sheet-small"><input type="number" name="attr_psikraft" /></div>
-            <div class="sheet-item sheet-small"><label>Range:</label></div>
-            <div class="sheet-item sheet-small"><input type="number" name="attr_psiRangeMin" /></div>
+            <div class="sheet-item sheet-med"><label>Ziehlbereich:</label></div>
+            <div class="sheet-item sheet-puny"><input type="number" name="attr_psiRangeMin" /></div>
             <div class="sheet-item sheet-puny" style="text-align: center;">/</div>
-            <div class="sheet-item sheet-small"><input type="number" name="attr_psiRangeMax" /></div>
+            <div class="sheet-item sheet-puny"><input type="number" name="attr_psiRangeMax" /></div>
+          </div>
+          <div class="sheet-row">
+            <div class="sheet-item sheet-tiny"><label>Noob:</label></div>
+            <div class="sheet-item sheet-small"><input type="text" name="attr_noob" /></div>
+            <div class="sheet-item sheet-med"><label>Aufrechthaltung:</label></div>
+            <div class="sheet-item sheet-small"><input type="text" name="attr_aufrechthaltung" /></div>
           </div>
           <div class="sheet-row">
             <div class="sheet-item sheet-small"><label>Sonstiges:</label></div>
