--- a/Shinobi_Gami_Chinese_Traditional/ShinobiGami.html
+++ b/Shinobi_Gami_Chinese_Traditional/ShinobiGami.html
@@ -462,9 +462,11 @@
                                 <tr>
                                     <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_emotion">感情骰
                                     </th>
+                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_belief">信念骰
+                                    </th>
                                     <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_place1">場景表
                                     </th>
-                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_badending">
+                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_fumble">
                                         大失敗表</th>
                                 </tr>
                             </thead>
@@ -479,12 +481,16 @@
                                     <td class="sheet-txt-center">
                                         <button class='old-roll' type='roll'
                                             style="background-color:#f6f6f6; color:#000000;"
+                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_belief=[[1d6]]}}"></button>
+                                    </td>
+                                    <td class="sheet-txt-center">
+                                        <button class='old-roll' type='roll' style="background-color:#f6f6f6; color:#000000;"
                                             value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_place1=[[2d6]]}}"></button>
                                     </td>
                                     <td class="sheet-txt-center">
                                         <button class='old-roll' type='roll'
                                             style="background-color:#f6f6f6; color:#000000;"
-                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_badending=[[2d6]]}}"></button>
+                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_fumble=[[2d6]]}}"></button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -496,9 +502,9 @@
                                 <tr>
                                     <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_place2">
                                         戰場表</th>
-                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_place3">
+                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_debuff01">
                                         變調表</th>
-                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_place4">
+                                    <th style="width: 100px;background:#000; color:#fff;" data-i18n="list_debuff02">
                                         戰國變調表</th>
                                 </tr>
                             </thead>
@@ -512,12 +518,12 @@
                                     <td class="sheet-txt-center">
                                         <button class='old-roll' type='roll'
                                             style="background-color:#f6f6f6; color:#000000;"
-                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_place3=[[2d6]]}}"></button>
+                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_debuff01=[[2d6]]}}"></button>
                                     </td>
                                     <td class="sheet-txt-center">
                                         <button class='old-roll' type='roll'
                                             style="background-color:#f6f6f6; color:#000000;"
-                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_place4=[[2d6]]}}"></button>
+                                            value="@{roll_display}&{template:Ninpo} {{name=@{character_name}}}{{roll_debuff02=[[2d6]]}}"></button>
                                     </td>
                                 </tr>
                             </tbody>
