--- a/WOIN/WOIN.html
+++ b/WOIN/WOIN.html
@@ -444,7 +444,9 @@
                         <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_health" value="0" /></td>
                         <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_maxhealth" value="0" /></td>
                         <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_carry_rating" value="0" /></td>
-						<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_carried_total" value="0" /></td>
+						            <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_carried_total" step="0.1" value="0" /></td>
+				
+
                     </tr>
                 </table>
             </div>
@@ -486,7 +488,8 @@
                                         <option value="Heavy">Heavy</option>
                                     </select>
                                 </td>
-                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" value="0" /></td>
+
+                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" step="0.1" value="0" /></td>
                             <td><input type="text" class="sheet-text3" name="attr_Armor_Ineffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_Armor_open" value="1"/><span></span></th>
                         </tr>
@@ -524,7 +527,7 @@
                                         <option value="Heavy">Heavy</option>
                                     </select>
                                 </td>
-                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" value="0" /></td>
+                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" step="0.1" value="0" /></td>
                             <td><input type="text" class="sheet-text3" name="attr_Armor_Ineffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_Armor_open" value="1"/><span></span></th>
                         </tr>
@@ -627,8 +630,8 @@
                             </td>
                             <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_skill" value="0" /></td>
                             <td><input type="number" class="sheet-number2" name="attr_weapon1_damage" value="0" /></td>
-							<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damageadd" value="0" /></td>
-							<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damagemod" value="0" /></td>
+							              <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damageadd" value="0" /></td>
+							              <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damagemod" value="0" /></td>
                             <td><input type="number" class="sheet-number2" name="attr_weapon1_range" value="0" /></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_weapon1_open" value="1"/><span></span></th>
                         </tr>
@@ -662,7 +665,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskill" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
@@ -686,7 +689,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskill" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
@@ -715,7 +718,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskillold" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
@@ -739,7 +742,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskillold" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
