--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
@@ -516,8 +516,8 @@
 
 <div class="sheet-tab-content sheet-tab3">
     <h1>Skills</h1>
-    <h3>UPDATE: The skills update will be going live on the 1st of October.
-
+    <h3>UPDATE: The skills update will be going live on the 1st of October.<br>
+        <br>
         IMPORTANT: A major update for the skills will be coming in the next month or so. This is a massive overhaul,
         and will require your existing skill data to be migrated to work with the new skills. However, the migration is
         complicated, and cannot be guaranteed to be successful. Therefore, please make a back up of all your skills,
